<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@drawable/ic_launcher_background"
    tools:context=".MainActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        android:text="@string/key_1"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        android:text="@string/key_2"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        android:text="@string/key_3"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_division"
        app:layout_constraintEnd_toStartOf="@id/key_composition"
        app:layout_constraintStart_toEndOf="@id/key_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_composition"
        android:text="@string/key_composition"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_equally"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        android:text="@string/key_4"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        android:text="@string/key_5"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        android:text="@string/key_6"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_subtraction"
        app:layout_constraintStart_toEndOf="@id/key_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_subtraction"
        android:text="@string/key_subtraction"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_composition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        android:text="@string/key_7"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        android:text="@string/key_8"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        android:text="@string/key_9"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_addition"
        app:layout_constraintStart_toEndOf="@id/key_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_addition"
        android:text="@string/key_addition"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_subtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        android:text="@string/key_0"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_dot"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        android:text="@string/key_dot"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_division"
        app:layout_constraintStart_toEndOf="@id/key_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_division"
        android:text="@string/division"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_equally"
        app:layout_constraintStart_toEndOf="@id/key_dot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_equally"
        android:text="@string/key_equally"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_division" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_clear"
        android:text="@string/key_clear"
        style="@style/ButtonsStyle"
        app:layout_constraintBottom_toTopOf="@id/key_addition"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/key_result"
        android:layout_width="@dimen/width_EdTxt"
        android:layout_height="@dimen/height_btn"
        android:background="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toTopOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_clear"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingClass" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonDarkAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDarkText"
        android:textSize="@dimen/txt_size"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX= "40dp"/>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rBtnLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rBtnLightText"
        android:textSize="@dimen/txt_size"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX= "40dp"
        app:layout_constraintTop_toBottomOf="@id/radioButtonDarkAction"/>


</androidx.constraintlayout.widget.ConstraintLayout>